Some refactoring, still plays stupid moves